--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "node index.js",
 		"server": "nodemon index.js",
 		"client": "npm start --prefix client",
+		"build": "npm i --prefix client && npm run build --prefix client",
 		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "",
